<?xml version="1.0"?>
<package format="2">
  <name>rewd_controllers</name>
  <version>0.0.0</version>
  <description>The ROS Effort With Dynamics Controllers package</description>
  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/personalrobotics/rewd_controllers</url>
  <author email="cliddick@cmu.edu">Clint Liddick</author>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>aikido</depend>
  <depend>actionlib</depend>
  <depend>angles</depend>
  <depend>dartsim</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>pr_control_msgs</depend>
  <depend>pr_hardware_interfaces</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>dynamic_reconfigure</depend>
  <buildtool_depend>clang-format-3.8</buildtool_depend>
  <doc_depend>doxygen</doc_depend>
  <export>
    <controller_interface plugin="${prefix}/rewd_controllers_plugins.xml"/>
  </export>
</package>
